--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <title>Movies</title>
    </head>
    <body>
-      Hi
+      <main></main>
       <script src="main.js"></script>
    </body>
 </html>
