--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       <title>Movies</title>
    </head>
    <body>
+      <header>
+         <form>
+            <input type="text" id="search" placeholder="Search movie" class="search">
+         </form>
+      </header>
       <main></main>
       <script src="main.js"></script>
    </body>
